# gam

./: .env.example  .gitignore  .simple-git-hooks.json  CHANGELOG.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  renovate.json  screenshot.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json
.github/workflows/: check.yml  release.yml
docs/: CHANGELOG.md  CODEBASE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANUAL.md  README.md  RELEASING.md
e2e/: alias-crud.spec.ts
electron/: ipc-handlers.ts  main.ts  preload.ts
electron/services/: file-service.ts  git-service.ts  known-repos-service.ts  ranking-service.ts
scripts/: release.js
src/: App.tsx  index.css  main.tsx  tauri-bridge.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  file_service.rs  git_service.rs  group_service.rs  known_repos_service.rs  lib.rs  main.rs  ranking_service.rs  settings_service.rs
src/components/: AliasForm.tsx  AliasLibraryPicker.tsx  AliasList.tsx  AliasListItem.tsx  ConfirmDialog.tsx  ContentArea.tsx  ErrorBoundary.tsx  GroupSidebar.tsx  SearchBar.tsx  SettingsDropdown.tsx  StatusBar.tsx  SuggestionChips.tsx  ThemeSettingsModal.tsx  ThemeSwitcher.tsx  TitleBar.tsx  Toast.tsx  Toolbar.tsx  UpdateModal.tsx  index.ts
src/contexts/: ThemeContext.tsx  (+1 more)
tests/: file-service.test.ts  git-service.test.ts  gitalias-library.test.ts  suggestion-service.test.ts  types.test.ts
(+78 files in other folders)
