[package]
name = "gam"
version = "1.0.0"
description = "Git Alias Manager"
authors = [ "zintaen" ]
edition = "2024"

[lib]
name = "gam_lib"
crate-type = [
    "lib",
    "cdylib",
    "staticlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [ "full" ] }
dirs = "6"
regex-lite = "0.1"
open = "5"
